--- a/about/soybase_team/index.html
+++ b/about/soybase_team/index.html
@@ -1,98 +1,165 @@
 ---
 title: About the SoyBase database and soybeans
 tools_menu: false
+Team:
+  - name: Jacqueline Campbell
+    role: SoyBase Co-curator
+    specialization: Data curation, Site development
+    website: https://www.ars.usda.gov/people-locations/person?person-id=55880
+    status: current
+  - name: Steven Cannon
+    role: Project Administration
+    specialization: Genome Assembly, Analysis
+    website: https://www.ars.usda.gov/midwest-area/ames/cicgru/people/steven-cannon/
+    status: current
+  - name: Wei Huang
+    role: 	Genome Browser
+    specialization: Genome Browser, Bioinformatics
+    website: https://www.ars.usda.gov/people-locations/person?person-id=57295
+    status: current
+  - name: Rex Nelson
+    role: Lead SoyBase Curator
+    specialization: Data Curation, Site Development
+    website: https://www.ars.usda.gov/midwest-area/ames/cicgru/people/rex-nelson/
+    status: current
+  - name: Nathan Weeks
+    role: Systems Administration
+    specialization: Informatics
+    website: https://www.ars.usda.gov/people-locations/person?person-id=41062
+    status: current
+    # current student employee
+  - name: Kimberly Raymer
+    role: Student Developer
+    status: student
+  - name: Simon Novak
+    role: Student Developer
+    status: student
+  - name: Chee Hau Fong
+    role: Student Developer
+    status: student
+    # past employee
+  - name: David Grant
+    role: Data Curation
+    status: pastTeam
+  - name: Robert Baker
+    role: Data Curation
+    status: pastTeam
+  - name: Victoria Blake 
+    role: Data Curation
+    status: pastTeam
+  - name: Anne Brown
+    role: Postdoctoral Scholar
+    status: pastTeam
+  - name: Shawn Conners
+    role: Programmer
+    status: pastTeam
+  - name: Kevin Feeley
+    role: Programmer, Web Development
+    status: pastTeam
+    # past student employee
+  - name: William Hardison 
+    role: Student Curator
+    status: pastStudent
+  - name: Abigial Pigatto
+    role: Student Curator
+    status: pastStudent
+  - name: Marlene Dorneich-Hayes 
+    role: Student Curator
+    status: pastStudent
+  - name: Laura Climer
+    role: Student Employee
+    status: pastStudent
+  - name: Katrina Kohn
+    role: Student Employee
+    status: pastStudent
+  - name: Samuel Sterns
+    role: Student Employee
+    status: pastStudent
+  - name: Jonathan Stroyan
+    role: Student Employee
+    status: pastStudent
+  - name: Daniel Tarte
+    role: Student Employee
+    status: pastStudent
+
+
 ---
 
+<div class="team">
 
-<div class="container">
-				<h1 class="top_bar">About the SoyBase Team</h1>
-				<table class="current-table" style="width:55%;"><tbody>
-		<tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Jacqueline Campbell</span>&nbsp;‐&nbsp;Geneticist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Jacqueline_Campbell.jpg"></th><th>Role</th><td>SoyBase Co-Curator</td></tr>
-		<tr><th>Specialization</th><td>data curation, site development</td></tr>
-		<tr><td colspan="2"><a href="https://www.ars.usda.gov/people-locations/person?person-id=55880">Learn More About Jacqueline Campbell</a></td>
-		<tr></tr>
+<h1 class="top_bar">About the SoyBase Team</h1>
+<table class="current-table" style="width:55%;">
+  <tbody>
+    {% assign current_team = page.Team | where: "status", "current" %}
+    {% for member in current_team  %}
+    <tr>
+      <th colspan="3" style="text-align:left;color:#fff;background-color:#060;">
+        <span style="font-size:14pt;">{{ member.name }}</span>&nbsp;‐&nbsp;{{ member.role }}
+      </th>
+    </tr>
+    <tr>
+      <th rowspan="4">
+        <img style="width:6em;" src="../../assets/img/team/{{ member.name | replace: ' ', '_' }}.jpg">
+      </th>
+      <th>Role</th>
+      <td>{{ member.role }}</td>
+    </tr>
+    <tr>
+      <th>Specialization</th>
+      <td>{{ member.specialization }}</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <a href="{{ member.website }}">Learn More About {{ member.name }}</a>
+      </td>
+    </tr>
+    <tr></tr>
+    {% endfor %}
+  </tbody>
+</table>
 
-				</tr><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Steven Cannon</span>&nbsp;‐&nbsp;Research Geneticist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Steven_Cannon.jpg"></th><th>Role</th><td>Project Administration</td></tr>
-		<tr><th>Specialization</th><td>genome assembly and analysis</td></tr>
-		<tr><td colspan="2"><a href="https://www.ars.usda.gov/midwest-area/ames/cicgru/people/steven-cannon/">Learn More About Steven Cannon</a></td>
-		<tr></tr>
+<h1>Current Student Employee</h1>
+<table id="currentStudent" style="width: 100%; padding: 1em">
+  <tbody>
+    {% assign student_team = page.Team | where: "status", "student" %}
+    {% for member in student_team %}
+    <tr>
+      <th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;">
+        <span style="font-size:14pt;">{{ member.name }}</span>&nbsp;‐&nbsp;{{ member.role }}
+      </th>
+    </tr>
+    <tr></tr>
+    {% endfor %}
+  </tbody>
+</table>
 
-				</tr><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Wei Huang</span>&nbsp;‐&nbsp;Computational Biologist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Wei_Huang.jpg"></th><th>Role</th><td>Genome Browser</td></tr>
-		<tr><th>Specialization</th><td>genome browser and bioinformatics</td></tr>
-		<tr><td colspan="2"><a href="https://soybase.org/about/index.php?about=Wei%20Huang">Learn More About Wei Huang</a></td>
-		<tr></tr>
+<h1>Past Employee</h1>
+<table id="currentStudent" style="width: 100%; padding: 1em">
+  <tbody>
+    {% assign past_team = page.Team | where: "status", "pastTeam" %}
+    {% for member in past_team %}
+    <tr>
+      <th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;">
+        <span style="font-size:14pt;">{{ member.name }}</span>&nbsp;‐&nbsp;{{ member.role }}
+      </th>
+    </tr>
+    <tr></tr>
+    {% endfor %}
+  </tbody>
+</table>
 
-				</tr><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Rex Nelson</span>&nbsp;‐&nbsp;Computational Biologist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Rex_Nelson.jpg"></th><th>Role</th><td>Lead SoyBase Curator</td></tr>
-		<tr><th>Specialization</th><td>data curation, site development</td></tr>
-		<tr><td colspan="2"><a href="https://www.ars.usda.gov/midwest-area/ames/cicgru/people/rex-nelson/">Learn More About Rex Nelson</a></td>
-		<tr></tr>
-
-				</tr><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Nathan Weeks</span>&nbsp;‐&nbsp;Information Technology Specialist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Nathan_Weeks.jpg"></th><th>Role</th><td>Systems Administration</td></tr>
-		<tr><th>Specialization</th><td>informatics</td></tr>
-		<tr><td colspan="2"><a href="https://www.ars.usda.gov/people-locations/person?person-id=41062">Learn More About Nathan Weeks</a></td>
-		<tr></tr>
-		</tr></tbody></table>
-
-	<h1>Current Student Employee</h1>
-	<table id="currentStudent" style="width: 100%; padding: 1em">	
-		<tbody>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Kimberly Raymer</span>&nbsp;‐&nbsp;Student Developer</th></tr>
-	<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Simon Novak</span>&nbsp;‐&nbsp;Student Developer</th></tr>
-	<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Chee Hau Fong</span>&nbsp;‐&nbsp;Student Developer</th></tr>
-	<tr></tr>
-	</tbody></table>
-		
-	<h1>Past Employee</h1>
-	<table id="pastEmployee" style="width: 100%; padding: 1em">	
-		<tbody>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">David Grant</span>&nbsp;‐&nbsp;Data Curation</th></tr>
-	</tbody></table>
-
-
-	<h1>Past Student Employee</h1>
-	<table id="pastStudentEmployee" style="width: 100%; padding: 1em">	
-		<tbody>
-			<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">William Hardison</span>&nbsp;‐&nbsp;Student Curator</th></tr>
-			<tr></tr>
-			<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Abigial Pigatto</span>&nbsp;‐&nbsp;Student Curator</th></tr>
-			<tr></tr>
-			<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Marlene Dorneich-Hayes</span>&nbsp;‐&nbsp;Student Curator</th></tr>
-			<tr></tr>
-</tbody></table>
-
-<script>
-function staffView() {
-  var x = document.getElementById("former_staff");
-  x.style.display = x.style.display === "none" ? "block" : "none";
-}
-</script>
-
-<h1 class="top_bar" onclick="staffView();">Click to View Recent SoyBase Staff</h1>
-<table id="former_staff" style="width: 100%; padding: 1em; display: none;">	<tbody><tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Robert Baker</span>&nbsp;‐&nbsp;Data Curation</th></tr>
-		<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Victoria Blake</span>&nbsp;‐&nbsp;Data Curation</th></tr>
-		<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Anne Brown</span>&nbsp;‐&nbsp;Postdoctoral Scholar</th></tr>
-		<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Laura Climer</span>&nbsp;‐&nbsp;Student Employee</th></tr>
-		<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Shawn Conners</span>&nbsp;‐&nbsp;Programmer</th></tr>
-		<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Kevin Feeley</span>&nbsp;‐&nbsp;Programmer, Web Development</th></tr>
-		<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Katrina Kohn</span>&nbsp;‐&nbsp;Student Employee</th></tr>
-		<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Samuel Sterns</span>&nbsp;‐&nbsp;Student Employee</th></tr>
-		<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Jonathan Stroyan</span>&nbsp;‐&nbsp;Student Employee</th></tr>
-		<tr></tr>
-	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Daniel Tarte</span>&nbsp;‐&nbsp;Student Employee</th></tr>
-		<tr></tr>
-</tbody></table></div>
+<h1>Past Student Employee</h1>
+<table id="currentStudent" style="width: 100%; padding: 1em">
+  <tbody>
+    {% assign pastStudent = page.Team | where: "status", "pastStudent" %}
+    {% for member in pastStudent %}
+    <tr>
+      <th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;">
+        <span style="font-size:14pt;">{{ member.name }}</span>&nbsp;‐&nbsp;{{ member.role }}
+      </th>
+    </tr>
+    <tr></tr>
+    {% endfor %}
+  </tbody>
+</table>
+</div>
