--- a/tools/alleles/index.html
+++ b/tools/alleles/index.html
@@ -5,39 +5,107 @@ tools_menu: true
 ---
 
 <H2>Allele Search</H2>
-
-<p><b>Step 1. Select a variant collection. Note that there are two reference assemblies to choose from.</b></p>
-
-<select id="collection-name" class="uk-select uk-form-width-large">
-  {% assign genus = "Glycine" %}
-  {% assign species = "max" %}
-  {% for metadata in site.data.datastore-metadata[genus][species].diversity %}
-    {% for metadata_file in metadata[1] %}
-      {% if metadata_file[0] contains "MANIFEST" %}
-        {% assign manifest = metadata_file %}
-        {% for item in manifest[1] %}
-          {% if item.applications contains "jbrowse" %}
-            {% assign filename_parts = item.name | split: "." %}
-            {% assign gensp = filename_parts[0] %}
-            {% assign coll_parts = filename_parts | slice: 1, 4 %}
-            {% assign diversity_base = filename_parts | slice: 1, 2 | join: "." %}
-            {% capture collection_name %}{{ coll_parts | join: "." }}{% endcapture %}
-            {%- capture collection_item -%}
-            {
-              "name": "{{item.name}}",
-              "collection-name": "{{collection_name}}",
-              "description": "{{item.description}}"
-            }
-            {%- endcapture %}
-            <option value='{{- collection_item | strip_newlines | strip_html -}}'>{{collection_name}}</option>
+<form>
+  <label class="uk-form-label uk-text-default uk-text-bold" for="form-stacked-text">Step 1. Select a variant collection. Note that there are two reference assemblies to choose from.</label>
+  <div>
+    <select id="collection-name" class="uk-select uk-form-width-large uk-margin-small-top">
+      {% assign genus = "Glycine" %}
+      {% assign species = "max" %}
+      {% for metadata in site.data.datastore-metadata[genus][species].diversity %}
+        {% for metadata_file in metadata[1] %}
+          {% if metadata_file[0] contains "MANIFEST" %}
+            {% assign manifest = metadata_file %}
+            {% for item in manifest[1] %}
+              {% if item.applications contains "jbrowse" %}
+                {% assign filename_parts = item.name | split: "." %}
+                {% assign gensp = filename_parts[0] %}
+                {% assign coll_parts = filename_parts | slice: 1, 4 %}
+                {% assign diversity_base = filename_parts | slice: 1, 2 | join: "." %}
+                {% capture collection_name %}{{ coll_parts | join: "." }}{% endcapture %}
+                {%- capture collection_item -%}
+                {
+                  "name": "{{item.name}}",
+                  "collection-name": "{{collection_name}}",
+                  "description": "{{item.description}}"
+                }
+                {%- endcapture %}
+                <option value='{{- collection_item | strip_newlines | strip_html -}}'>{{collection_name}}</option>
+              {% endif %}
+            {% endfor %}
           {% endif %}
         {% endfor %}
-      {% endif %}
-    {% endfor %}
-  {% endfor %}
-</select>
-<div style="margin-left: 10px;">
-  Description: <span id="synopsis"></span>
+      {% endfor %}
+    </select>
+  </div>
+  <div style="margin-left: 10px;">
+    <label class="uk-form-label uk-text-default uk-text-emphasis">Synopsis: <span id="synopsis"></span></label>
+  </div>
+
+  <div class="uk-margin" style="display: flex; justify-content: start;">
+    <div>
+      <div>
+        <label class="uk-form-label uk-text-default uk-text-bold" for="form-stacked-text">Step 2. Enter gene ID and size of left and right flanking regions...</label>
+        <div><input class="uk-input uk-form-width-large uk-margin-small-top" type="text" id="gene-name" placeholder="Enter gene name"></input></div>
+      </div>
+      <div>
+        <label class="uk-form-label uk-text-default uk-text-muted">e.g glyma.Wm82.gnm4.ann1.Glyma.16G044100</label>
+      </div>
+    </div>
+    <div >
+      <br>
+      <div class="uk-margin-small-left">
+        <input class="uk-input uk-form-width-medium uk-margin-small-top" type="text" id="flank-region"  placeholder="Enter flanking region">
+      </input>
+      <div>
+        <label class="uk-form-label uk-text-default uk-text-muted">e.g 50000</label>
+      </div>
+    </div>
+    </div>
+  </div>
+  
+  <div class="uk-margin">
+    <div>
+        <label class="uk-form-label uk-text-default uk-text-bold" for="form-stacked-text">... or a genomic region, as a chromosome: start-end.</label>
+    </div>
+  <div>
+    <input class="uk-input uk-form-width-medium uk-margin-small-top" type="text" id="start-end" rows="10" cols="30" placeholder="Start-End"></input>
+    <div>
+      <div><label class="uk-form-label uk-text-default uk-text-muted">e.g 1000000-200000</label></div>
+    </div>
+  </div>
+  <input class="uk-button uk-margin" uk-toggle="target: #modal" id="submit" type="button" value="Search" onclick="getData()" style="margin-top: 10px;"/>
+  </div>
+</form>
+
+<div id="modal" uk-modal bg-close="false">
+  <div class="uk-modal-dialog uk-modal-body">
+      <h2 class="uk-modal-title"></h2>
+          <div id="modal-body">
+              <table id="variant-table uk-table-striped" class="uk-table uk-table-divider">
+                  <caption>Search Results for <span id="modal-title"></span></caption>
+                  <thead>
+                      <tr>
+                          <th>ID</th>
+                          <th>Position</th>
+                          <th>Alleles</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr id="data-row">
+                          <td id="id"></td>
+                          <td id="position"></td>
+                          <td id="alleles"></td>
+                      </tr>
+                  </tbody>
+                  <tfoot>
+                      <tr>
+                          <td></td>
+                      </tr>
+                  </tfoot>
+              </table>
+          </div>
+      <button class="uk-button uk-modal-close" type="button" onclick="deleteRow()">Close</button>
+  </div>
 </div>
 <!-- <br>
 <br>
@@ -81,7 +149,7 @@ tools_menu: true
 let variantCollection = document.getElementById("collection-name")
 function onChange(){
   let value = JSON.parse(variantCollection.value)
-  console.log(value)
+  console.log("value",value)
   document.getElementById("synopsis").innerHTML = 
         `
         <span>${value.description}</span>
@@ -89,4 +157,114 @@ function onChange(){
 }
 variantCollection.onchange = onChange
 onChange()
+
+function deleteRow() {
+    window.location.reload();
+}
+
+
+/* ========================================================================= */
+/* API calls */
+/* ========================================================================= */
+async function getData() {
+
+const geneName = document.getElementById("gene-name").value;
+let geneNames = geneName.split(",");
+let geneNamesString = "";
+
+geneNames.forEach(name => {
+  geneNamesString += `"${name}",`;
+})
+
+geneNamesString = geneNamesString.slice(0, -1).replace(/\s/g, '');
+console.log("string: ", geneNamesString)
+
+// --------------------------
+// api call
+// --------------------------
+let myHeaders = new Headers();
+myHeaders.append("Content-Type", "text/plain");
+let searchString = `{"genes":[${geneNamesString}]}`;
+
+let requestOptions = {
+  method: 'POST',
+  headers: myHeaders,
+  body: searchString,
+  redirect: 'follow'
+};
+
+await fetch("https://gcv.soybase.org/microservices/soybase/genes", requestOptions)
+  .then(response =>{
+      if(!response.ok){
+          throw error
+      }
+      return response.json()})
+  .then(result => {
+    console.log(result)
+    let chromosomeArray = result.genes[0].chromosome.split('.')
+    let collectionName = `${chromosomeArray[1]}.${chromosomeArray[2]}`
+    console.log("line 84",collectionName)
+    let chromosome = result.genes[0].chromosome
+    let start = result.genes[0].fmin
+    let stop = result.genes[0].fmax
+
+
+   document.getElementById("modal-title").innerHTML = `
+   <span uk-tooltip=${result.genes[0].chromosome}>${result.genes[0].name}</span>
+   `
+
+      getDataFromFastA(chromosome,collectionName,start,stop);
+  })
+  .catch(error => console.log('error', error));
+
+
+  function getDataFromFastA(chromosome,collectionName,start,stop) {
+       //let chromosome = "glyma.Wm82.gnm4.Gm01"
+       console.log("CollectionName",collectionName)
+       let collection = `${collectionName}.div.Song_Hyten_2015`  //HOW TO KNOW WHAT COLLECTION?
+       //let start = 1
+       //let stop = 100000
+      //let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${start}-${stop}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/glyma.${collection}.vcf.gz`
+      let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${start}-${stop}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/glyma.${collection}.vcf.gz`
+      let requestOptionsVariants = {
+      method: 'GET',
+      redirect: 'follow',
+      headers: {
+          "Accept": "application/json"
+      }
+      };
+
+      fetch(url, requestOptionsVariants)
+      .then(response => response.json())
+      .then(result => {
+          console.log("variants: ",result)
+
+          result.map(gene => {
+              document.getElementById("id").innerHTML +=
+                  `
+                      <div>
+                          <span>${gene.id}</span>
+                      </div>
+                  `
+              document.getElementById("position").innerHTML +=
+                  `
+                      <div>
+                          <span>${gene.pos}</span>
+                      </div>
+                  `
+              document.getElementById("alleles").innerHTML +=
+                  `
+                      <div>
+                          <span>${gene.alleles[0]} ${gene.alleles[1]}</span>
+                      </div>
+                  `
+              })
+
+              let input = document.getElementById("gene-name");
+              input.value = '';
+              
+              })
+              .catch(error => console.log('error', error))      
+      }
+  }
 </script>
