--- a/tools/alleles/index.html
+++ b/tools/alleles/index.html
@@ -157,7 +157,6 @@ function onChange(){
 }
 variantCollection.onchange = onChange
 onChange()
-
 function deleteRow() {
     window.location.reload();
 }
@@ -177,7 +176,6 @@ geneNames.forEach(name => {
 })
 
 geneNamesString = geneNamesString.slice(0, -1).replace(/\s/g, '');
-console.log("string: ", geneNamesString)
 
 // --------------------------
 // api call
@@ -200,10 +198,8 @@ await fetch("https://gcv.soybase.org/microservices/soybase/genes", requestOption
       }
       return response.json()})
   .then(result => {
-    console.log(result)
     let chromosomeArray = result.genes[0].chromosome.split('.')
     let collectionName = `${chromosomeArray[1]}.${chromosomeArray[2]}`
-    console.log("line 84",collectionName)
     let chromosome = result.genes[0].chromosome
     let start = result.genes[0].fmin
     let stop = result.genes[0].fmax
@@ -221,11 +217,16 @@ await fetch("https://gcv.soybase.org/microservices/soybase/genes", requestOption
   function getDataFromFastA(chromosome,collectionName,start,stop) {
        //let chromosome = "glyma.Wm82.gnm4.Gm01"
        console.log("CollectionName",collectionName)
-       let collection = `${collectionName}.div.Song_Hyten_2015`  //HOW TO KNOW WHAT COLLECTION?
+       let collectionVariantObj = JSON.parse(variantCollection.value)
+       console.log("line226",collectionVariantObj['collection-name'])
+       //let collection = `${collectionName}.div.Song_Hyten_2015`  //HOW TO KNOW WHAT COLLECTION?
+       let collection = collectionVariantObj['collection-name'] //Dynamically get collection name from selections
+       let fileName = collectionVariantObj.name
+       console.log("collect",collection)
        //let start = 1
        //let stop = 100000
       //let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${start}-${stop}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/glyma.${collection}.vcf.gz`
-      let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${start}-${stop}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/glyma.${collection}.vcf.gz`
+      let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${start}-${stop}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/${fileName}`
       let requestOptionsVariants = {
       method: 'GET',
       redirect: 'follow',
