--- a/tools/alleles/index.html
+++ b/tools/alleles/index.html
@@ -83,6 +83,8 @@ tools_menu: true
           <div id="modal-body">
               <table id="variant-table uk-table-striped" class="uk-table uk-table-divider">
                   <caption>Search Results for <span id="modal-title"></span></caption>
+                  <caption>Genomic Region: <span id="modal-search-region"></span></caption>
+
                   <thead>
                       <tr>
                           <th>ID</th>
@@ -204,7 +206,7 @@ await fetch("https://gcv.soybase.org/microservices/soybase/genes", requestOption
     let start = result.genes[0].fmin
     let stop = result.genes[0].fmax
 
-
+    console.log(result)
    document.getElementById("modal-title").innerHTML = `
    <span uk-tooltip=${result.genes[0].chromosome}>${result.genes[0].name}</span>
    `
@@ -223,10 +225,34 @@ await fetch("https://gcv.soybase.org/microservices/soybase/genes", requestOption
        let collection = collectionVariantObj['collection-name'] //Dynamically get collection name from selections
        let fileName = collectionVariantObj.name
        console.log("collect",collection)
+
+       let flankingRegion = document.getElementById("flank-region").value
+       console.log("Flank",flankingRegion)
+       let startWithFlank
+       let stopWithFlank
+        if(flankingRegion){
+          console.log(true)
+          if(flankingRegion > parseInt(start)){
+            startWithFlank = 0
+            stopWithFlank = parseInt(stop)+parseInt(flankingRegion)
+          }else{
+            startWithFlank = parseInt(start)-parseInt(flankingRegion)
+            stopWithFlank = parseInt(stop)+parseInt(flankingRegion)
+          }
+         
+        }else{
+          console.log(false)
+          startWithFlank = start
+          stopWithFlank = stop
+        }
+
+        document.getElementById("modal-search-region").innerHTML = `<span>${startWithFlank} - ${stopWithFlank}</span>`
+        console.log("startFlank", startWithFlank)
+        console.log("stopFlank", stopWithFlank)
        //let start = 1
        //let stop = 100000
       //let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${start}-${stop}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/glyma.${collection}.vcf.gz`
-      let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${start}-${stop}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/${fileName}`
+      let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${startWithFlank}-${stopWithFlank}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/${fileName}`
       let requestOptionsVariants = {
       method: 'GET',
       redirect: 'follow',
