--- a/tools/alleles/index.html
+++ b/tools/alleles/index.html
@@ -68,7 +68,7 @@ tools_menu: true
         <label class="uk-form-label uk-text-default uk-text-bold" for="form-stacked-text">... or a genomic region, as a chromosome: start-end.</label>
     </div>
   <div>
-    <input class="uk-input uk-form-width-medium uk-margin-small-top" type="text" id="start-end" rows="10" cols="30" placeholder="Start-End"></input>
+    <input class="uk-input uk-form-width-medium uk-margin-small-top" type="text" id="genomic-region" rows="10" cols="30" placeholder="Start-End"></input>
     <div>
       <div><label class="uk-form-label uk-text-default uk-text-muted">e.g 1000000-200000</label></div>
     </div>
@@ -79,7 +79,7 @@ tools_menu: true
 
 <div id="modal" uk-modal bg-close="false">
   <div class="uk-modal-dialog uk-modal-body">
-      <h2 class="uk-modal-title"></h2>
+      <h2 class="uk-modal-title">Allele Search</h2>
           <div id="modal-body">
               <table id="variant-table uk-table-striped" class="uk-table uk-table-divider">
                   <caption>Search Results for <span id="modal-title"></span></caption>
@@ -246,13 +246,12 @@ await fetch("https://gcv.soybase.org/microservices/soybase/genes", requestOption
           stopWithFlank = stop
         }
 
-        document.getElementById("modal-search-region").innerHTML = `<span>${startWithFlank} - ${stopWithFlank}</span>`
-        console.log("startFlank", startWithFlank)
-        console.log("stopFlank", stopWithFlank)
-       //let start = 1
-       //let stop = 100000
-      //let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${start}-${stop}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/glyma.${collection}.vcf.gz`
-      let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${startWithFlank}-${stopWithFlank}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/${fileName}`
+      let parsedGenomicRegion = document.getElementById("genomic-region").value.split('-')
+      document.getElementById("genomic-region").value ? document.getElementById("modal-search-region").innerHTML = `<span>${parsedGenomicRegion[0]} - ${parsedGenomicRegion[1]}</span>` : document.getElementById("modal-search-region").innerHTML = `<span>${startWithFlank} - ${stopWithFlank}</span>`
+
+
+      let urlRegion = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${parsedGenomicRegion[0]}-${parsedGenomicRegion[1]}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/${fileName}`
+      let urlFlank = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${startWithFlank}-${stopWithFlank}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/${fileName}`
       let requestOptionsVariants = {
       method: 'GET',
       redirect: 'follow',
@@ -261,11 +260,12 @@ await fetch("https://gcv.soybase.org/microservices/soybase/genes", requestOption
       }
       };
 
+        let url = document.getElementById("genomic-region").value ? urlRegion : urlFlank
+
       fetch(url, requestOptionsVariants)
       .then(response => response.json())
       .then(result => {
-          console.log("variants: ",result)
-
+        console.log
           result.map(gene => {
               document.getElementById("id").innerHTML +=
                   `
@@ -282,7 +282,7 @@ await fetch("https://gcv.soybase.org/microservices/soybase/genes", requestOption
               document.getElementById("alleles").innerHTML +=
                   `
                       <div>
-                          <span>${gene.alleles[0]} ${gene.alleles[1]}</span>
+                          <span>${gene.alleles}</span>
                       </div>
                   `
               })
